--- a/src/pages/myInfo/myInfo.scss
+++ b/src/pages/myInfo/myInfo.scss
@@ -125,5 +125,11 @@
         font-size: .24rem;
       }
     }
+    .login_btn {
+      width: 90%;
+      font-size: .36rem;
+      background: #00bcd4;
+      border-color: #00bcd4;
+    }
   }
 }
